@@ -37,6 +37,7 @@ import org.thingsboard.server.common.data.query.KeyFilter;
 import org.thingsboard.server.common.data.query.StringFilterPredicate;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 public class ApiUsageStateFilterTest extends AbstractEDQTest {
@@ -64,7 +65,7 @@ public class ApiUsageStateFilterTest extends AbstractEDQTest {
         var result = repository.findEntityDataByQuery(tenantId, null, getEntityDataQuery(new CustomerId(customerId)), false);
 
         Assert.assertEquals(1, result.getTotalElements());
-        var customer = result.getData().get(0);
+        var customer = result.getData().getFirst();
         Assert.assertEquals("Customer A", customer.getLatest().get(EntityKeyType.ENTITY_FIELD).get("name").getValue());
     }
 
@@ -81,6 +82,7 @@ public class ApiUsageStateFilterTest extends AbstractEDQTest {
         apiUsageState.setSmsExecState(ApiUsageStateValue.ENABLED);
         apiUsageState.setEmailExecState(ApiUsageStateValue.ENABLED);
         apiUsageState.setAlarmExecState(ApiUsageStateValue.ENABLED);
+        apiUsageState.setEdgeState(ApiUsageStateValue.ENABLED);
         return apiUsageState;
     }
 
@@ -99,7 +101,7 @@ public class ApiUsageStateFilterTest extends AbstractEDQTest {
         nameFilter.setPredicate(predicate);
         nameFilter.setValueType(EntityKeyValueType.STRING);
 
-        return new EntityDataQuery(filter, pageLink, entityFields, null, Arrays.asList(nameFilter));
+        return new EntityDataQuery(filter, pageLink, entityFields, null, List.of(nameFilter));
     }
 
 }
